# franka-bimanual

./: .gitignore  .gitmodules  CLAUDE.md  CONTROL_STACK.md  Dockerfile  README.md  SIM_VS_REAL_CONTROL.md  STUDENT_INPUT_PARITY.md  docker_instruct.md  main.py  pyproject.toml  requirements.txt  train.sh  train.slurm  train_act_4gpu.slurm  train_diffusion_4gpu.slurm  train_diffusion_multigpu.sh  train_multigpu.sh
gym_env/: franka_arm_controller.py  franka_bimanual_env.py
home_poses/: home_pose.json
lerobot/: wsg.md
lerobot/lerobot_camera_arv/: pyproject.toml
lerobot/lerobot_camera_arv/lerobot_camera_arv.egg-info/: PKG-INFO  top_level.txt
lerobot/lerobot_robot_bimanual_franka/: __init__.py  pyproject.toml
lerobot/lerobot_robot_bimanual_franka/lerobot_robot_bimanual_franka/: __init__.py  bimanual_franka.py  bimanual_franka_config.py  franka_process.py  gige_camera.py  safety.py  wsg.py
lerobot/lerobot_robot_bimanual_franka/lerobot_robot_bimanual_franka.egg-info/: top_level.txt
lerobot/lerobot_teleoperator_gello/: __init__.py  pyproject.toml
lerobot/lerobot_teleoperator_gello/lerobot_teleoperator_gello/: bimanual_gello.py  config_bimanual_gello.py  config_gello.py  gello.py
lerobot/lerobot_teleoperator_gello/lerobot_teleoperator_gello.egg-info/: PKG-INFO  requires.txt
lerobot/lerobot_teleoperator_spacemouse/: pyproject.toml
lerobot/lerobot_teleoperator_spacemouse/lerobot_teleoperator_spacemouse/: config_spacemouse.py  spacemouse.py
lerobot_camera_framos/: pyproject.toml
lerobot_camera_framos/lerobot_camera_framos/: __init__.py  config_framos.py  framos.py
lerobot_camera_framos/lerobot_camera_framos.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lerobot_robot_bimanual_franka/: README.md  __init__.py  pyproject.toml
lerobot_teleoperator_gello/: README.md
lerobot_teleoperator_spacemouse/: README.md  __init__.py  pyproject.toml
residual_wrapper/: check_ee_vel.py  env_wrapper.py  plot_policy_pcd.py  policy_wrapper.py  run_residual.py  stitch_videos.py  viz.py
scripts/: bringup.sh  ee_record_data.sh  filter_noop_actions.py  gello_ee_teleop.sh  home_pose.py  lerobot_record_homed.py  lerobot_record_homed_single_arm.py  local_module_check.sh  open_fci.sh  openpi_client_franka.py  record_data.sh  record_data_homed.sh  recover_arm.py  replay.sh  rollout_policy.sh  rollout_policy_homed.sh  single_arm_delta_record_data_homed.sh  single_arm_delta_teleop.sh  single_arm_record_data.sh  single_arm_record_data_homed.sh  single_arm_replay.sh  (+10 more)
(+174 files in other folders)
