[project]
name = "lerobot_teleoperator_gello"
version = "0.1.0"
description = "A lerobot plugin for the franka gello (by Phillip Wu) teleop device from Aaron Tsai, forked from the implementation by (https://github.com/F-Fer/lerobot_ur5e_gello.git)."
requires-python = ">=3.11"

dependencies = [
    "lerobot",
    "dynamixel-sdk>=3.8",
]

[tool.setuptools]
packages = ["lerobot_teleoperator_gello"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"